LiverpoolRummy/main/default/objects/Player_s_Hand_for_Game__c/Player_s_Hand_for_Game__c.object-meta.xml
<CustomObject>
    <description>One hand within a game for a player</description>
    <label>Player&apos;s Hand for Game</label>
    <nameField>
        <displayFormat>Hand {0000000000}</displayFormat>
        <label>Hand Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Player&apos;s Hands for Game</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>