LiverpoolRummy/main/default/objects/Player_s_Hand_for_Game__c/fields/Hand_Order__c.field-meta.xml
<CustomField>
    <fullName>Hand_Order__c</fullName>
    <label>Hand Order</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>