LiverpoolRummy/main/default/objects/Player_s_Hand_for_Game__c/fields/Jokers__c.field-meta.xml
<CustomField>
    <fullName>Jokers__c</fullName>
    <label>Jokers</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>