LiverpoolRummy/main/default/objects/Player_s_Hand_for_Game__c/fields/Player__c.field-meta.xml
<CustomField>
    <fullName>Player__c</fullName>
    <formula>Player_for_Game__r.Player__r.FirstName +&apos; &apos;+ Player_for_Game__r.Player__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Player</label>
    <type>Text</type>
</CustomField>