LiverpoolRummy/main/default/objects/Player_s_Hand_for_Game__c/fields/Player_for_Game__c.field-meta.xml
<CustomField>
    <fullName>Player_for_Game__c</fullName>
    <description>Who played this hand in which game?</description>
    <inlineHelpText>Who played this hand in which game?</inlineHelpText>
    <label>Player for Game</label>
    <referenceTo>Player_for_Game__c</referenceTo>
    <relationshipLabel>Player&apos;s Hands</relationshipLabel>
    <relationshipName>Player_s_Hands_for_Game</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>